tests/snapshots/purity_parity/purity_parity__H__77_hm_logical_non_bool_compile_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | TYPE UNIFICATION ERROR | expected Bool operands, found Int and Bool

== jit tuples ==
- E300 | TYPE UNIFICATION ERROR | expected Bool operands, found Int and Bool

== parity ==
match

== mismatch_debug ==
<none>
