tests/snapshots/purity_parity/purity_parity__H__79_hm_module_generic_call_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/79_hm_module_generic_call_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict --root examples/type_system examples/type_system/failing/79_hm_module_generic_call_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict --root examples/type_system examples/type_system/failing/79_hm_module_generic_call_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | Annotation Type Mismatch | this value has type `String`

== jit tuples ==
- E300 | Annotation Type Mismatch | this value has type `String`

== parity ==
match

== mismatch_debug ==
<none>
