tests/snapshots/purity_parity/purity_parity__H__85_hm_function_effect_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/85_hm_function_effect_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/85_hm_function_effect_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/85_hm_function_effect_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | TYPE UNIFICATION ERROR | this argument is `(Int) -> Int with IO`

== jit tuples ==
- E300 | TYPE UNIFICATION ERROR | this argument is `(Int) -> Int with IO`

== parity ==
match

== mismatch_debug ==
<none>
