tests/snapshots/purity_parity/purity_parity__H__86_hm_mixed_numeric_typed_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | Type Mismatch | this expression has type `Float`
- E300 | Return Type Mismatch | `main` was declared to return `Unit`

== jit tuples ==
- E300 | Type Mismatch | this expression has type `Float`
- E300 | Return Type Mismatch | `main` was declared to return `Unit`

== parity ==
match

== mismatch_debug ==
<none>
