tests/snapshots/purity_parity/purity_parity__H__87_hm_pattern_binding_constrained_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | TYPE UNIFICATION ERROR | expected Unit, found String

== jit tuples ==
- E300 | TYPE UNIFICATION ERROR | expected Unit, found String

== parity ==
match

== mismatch_debug ==
<none>
